// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Card -  renders a child object 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    This is child text
    

  </div>
</div>
`;

exports[`Component: Card -  renders a text in card-body 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    <p>
      Text that goes in card body
    </p>
    

  </div>
</div>
`;

exports[`Component: Card -  renders a title 1`] = `
<div
  className="card"
>
  <header
    className="card-header"
  >
    <h3>
      Card title goes here
    </h3>
  </header>
  <div
    className="card-body"
  >
    

  </div>
</div>
`;

exports[`Component: Card -  renders an image 1`] = `
<div
  className="card"
>
  <div
    className="card-img"
  >
    

    <img
      alt=""
      src="url.address"
    />
    

  </div>
  <div
    className="card-body"
  >
    

  </div>
</div>
`;

exports[`Component: Card -  renders footer link text 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    

  </div>
  <footer
    className="card-footer"
  >
    <div
      className="footer-link"
    >
      <a
        href="#"
      >
        Click this footer link
      </a>
    </div>
  </footer>
</div>
`;

exports[`Component: Card -  renders footer text 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    

  </div>
  <footer
    className="card-footer"
  >
    Footer information
  </footer>
</div>
`;

exports[`Component: Card -  renders with a button 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    

    <button
      className="btn btn-primary"
      type="button"
    >
      

      

    </button>
  </div>
</div>
`;

exports[`Component: Card -  renders with class name card 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    

  </div>
</div>
`;

exports[`Component: Card -  renders with correct class name 1`] = `
<div
  className="card card-brand"
>
  <div
    className="card-body"
  >
    

  </div>
</div>
`;

exports[`Component: Card -  renders with only body when no props are passed 1`] = `
"<div class=\\"card\\"><div class=\\"card-body\\">
</div></div>"
`;

exports[`Component: Card -  throws an error if type does not match proptypes 1`] = `
<div
  className="card card-error"
>
  <div
    className="card-body"
  >
    

  </div>
</div>
`;
